--- a/html/销售网络-国际.html
+++ b/html/销售网络-国际.html
@@ -18,7 +18,7 @@ $bclassid=$GLOBALS[navclassid]; //取得本栏目id
 <div id="body_container">
 	<div class="banner">
 		<div class="banner-content">
-			<script src="http://www.franzsandner.com/d/js/acmsd/thea19.js"></script>
+			<script src="http://en.franzsandner.com/d/js/acmsd/thea14.js"></script>
 		</div>
 	</div>
 	<div class="divsd">
@@ -27,13 +27,13 @@ $bclassid=$GLOBALS[navclassid]; //取得本栏目id
 				<h3>德国法兰山德</h3>
 			</div>
 			<div class="list-page-num f-l-l">
-				<h2 class="f-l-l">Global Marketing&gt;</h2>
-				<h3 class="f-l-l">Global Distributors</h3>
+				<h2 class="f-l-l" style="font-size: 30px">Global Marketing&gt;</h2>
+				<h3 class="f-l-l" style="font-size: 24px">Global Distributors</h3>
 			</div>
 		</div>
 
 		<div class="m_n">
-			<div class="main_new2">
+			<div class="main_new2 clearfix">
 
 				<!-- 左侧菜单开始···················································· -->
 				<div class="nn_left2">
@@ -45,7 +45,6 @@ $bclassid=$GLOBALS[navclassid]; //取得本栏目id
 					<div class="clear" style="height:20px"></div>
 				</div>
 				<div class="nn_right">
-					<h4 class="right05">&gt;&gt; <a href="[!--news.url--]xiaoshou/">Global Marketing</a> &gt; Global Distributors</h4>
 					<div class="global-map-net" style="margin-left:10px;">
 						<img src="../images/dls_11.jpg" width="730px" height="429px" border="0" usemap="#Map">
 					</div>
