--- a/html/头部.html
+++ b/html/头部.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 <script type="text/javascript">
 	$(function() {
 // 1.0 首页nav子菜单显示与隐藏
@@ -60,28 +59,28 @@
 	});
 </script>
 <!-- 登录弹框························································ -->
-<div class="modal fade login-content" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header" style="margin-bottom: 20px;">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="myModalLabel">會員登錄</h4>
-			</div>
-			<script>
-				document.write('<script src="[!--news.url--]e/member/login/loginjs.php?t='+Math.random()+'"><'+'/script>');
-			</script>
+<!--<div class="modal fade login-content" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+	<div class="modal-content">
+	  <div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		<h4 class="modal-title" id="myModalLabel">Log in</h4>
+	  </div>
+<script>
+document.write('<script src="[!--news.url--]e/member/login/loginjs.php?t='+Math.random()+'"><'+'/script>');
+</script>
 
-			<div class="modal-footer change-login clearfix" style="display: none">
-				<div class="qq-login normal-login f-l-l">
-					<a class="f-l-l"  href="">QQ賬號登陸</a>
-				</div>
-				<div class="sina-login normal-login f-l-l">
-					<a class="f-l-l" href="">微博賬號登陸</a>
-				</div>
-			</div>
-		</div>
-	</div>
+	  <div class="modal-footer change-login clearfix">
+			<!--<div class="qq-login normal-login f-l-l">
+				<a class="f-l-l"  href="">QQ账号登陆</a>
+			</div>-->
+<!--<div class="sina-login normal-login f-l-l">
+	<a class="f-l-l" href="">微博账号登陆</a>
 </div>
+</div>
+</div>
+</div>
+</div>-->
 <!-- 登录弹框结束················································ -->
 <!-- 第一屏······························································ -->
 <!-- 头部··························································· -->
@@ -90,62 +89,61 @@
 	<div class="head">
 		<div class="head-top">
 			<div class="head-nav-logo">
-				<h1><a href="javascript:;">法蘭山德官網方網站</a></h1>
+				<h1><a href="javascript:;">FRANZ SANDNER Website</a></h1>
 				<!-- Button trigger modal -->
-				<script>
-					document.write('<script src="[!--news.url--]e/member/login/loginjstwo.php?t='+Math.random()+'"><'+'/script>');
-				</script>
-				<span class="en-flsd f-l-r"><a href="http://en.franzsandner.com/">English</a></span>
-				<span class="en-flsd f-l-r"><a href="http://www.franzsandner.com/">简体中文</a></span>
+				<!--<script>
+				document.write('<script src="[!--news.url--]e/member/login/loginjstwo.php?t='+Math.random()+'"><'+'/script>');
+				</script>-->
+				<span class="en-flsd f-l-r go-ft  go-jt"><a href="http://www.franzsandner.com/"></a></span>
+				<span class="en-flsd f-l-r go-ft"><a href="http://tw.franzsandner.com/"></a></span>
+				<!--新增搜索框17.1.3-->
+				<div class="head-search-warp">
+					<form action="">
+						<input class="search-content" type="text" required placeholder="Input content">
+						<input class="search-sub"  type="submit" value=" ">
+					</form>
+				</div>
+				<!--/新增搜索框17.1.3-->
 			</div>
 		</div>
 	</div>
 	<nav class="head-nav">
 		<!-- 一级主菜单 -->
 		<div class="navBar head-nav-menu">
-			<ul class="nav clearfix">
-				<li id="m1" class="m">
-					<h3><a target="_blank" href="[!--news.url--]">網站首頁</a></h3>
-					<!--<ul class="sub list-group">
-						<li ><a  class="list-group-item" href="[!--news.url--]">法兰山德</a></li>
-						<li ><a  class="list-group-item" href="[!--news.url--]">奥古斯特·福斯特</a></li>
-						<li ><a  class="list-group-item" href="[!--news.url--]">经营理念</a></li>
-						<li ><a  class="list-group-item" href="[!--news.url--]">重要成员</a></li>
-						<li ><a  class="list-group-item" href="[!--news.url--]">技术团队</a></li>
-					</ul>-->
-				</li>
-				<li id="m5" class="m">
-					<h3><a target="_blank" href="[!--news.url--]jieshao/">公司介紹<i></i></a></h3>
-				</li>
+			<!--<ul class="sub list-group">
+							  <li ><a  class="list-group-item" href="[!--news.url--]">法兰山德</a></li>
+							  <li ><a  class="list-group-item" href="[!--news.url--]">奥古斯特·福斯特</a></li>
+							  <li ><a  class="list-group-item" href="[!--news.url--]">经营理念</a></li>
+							  <li ><a  class="list-group-item" href="[!--news.url--]">重要成员</a></li>
+							  <li ><a  class="list-group-item" href="[!--news.url--]">技术团队</a></li>
+						  </ul>-->
+			<ul class="nav clearfix"><li id="m5" class="m">
+				<h3><a target="_blank" href="[!--news.url--]jieshao/">About us<i></i></a></h3>
+			</li>
 				<li id="m2" class="m">
-					<h3><a target="_blank" href="[!--news.url--]gangqin/">鋼琴<i></i></a></h3>
+					<h3><a target="_blank" href="[!--news.url--]gangqin/">Piano<i></i></a></h3>
 				</li>
 
 				<li id="m3" class="m">
-					<h3><a target="_blank" href="[!--news.url--]tiqin/">提琴<i></i></a></h3>
+					<h3><a target="_blank" href="[!--news.url--]tiqin/">String<i></i></a></h3>
 				</li>
 
 				<li id="m4" class="m">
-					<h3><a target="_blank" href="[!--news.url--]jita/">吉他<i></i></a></h3>
+					<h3><a target="_blank" href="[!--news.url--]jita/">Guitar<i></i></a></h3>
 				</li>
 
 				<li id="m5" class="m">
-					<h3><a target="_blank" href="[!--news.url--]peijian/">配件<i></i></a></h3>
-
+					<h3><a target="_blank" href="[!--news.url--]peijian/">Accessory<i></i></a></h3>
 				</li>
 
 				<li id="m5" class="m">
-					<h3><a target="_blank" href="[!--news.url--]news/gangqin">樂器新聞</a></h3>
-				</li>
-
-				<li id="m5" class="m">
-					<h3><a target="_blank" href="[!--news.url--]xiaoshou/shopone">銷售網路</a></h3>
+					<h3><a target="_blank" href="[!--news.url--]xiaoshou">Marketing</a></h3>
 				</li>
 				<li id="m5" class="m">
-					<h3><a target="_blank" href="[!--news.url--]lianxi">聯繫我們</a></h3>
+					<h3><a target="_blank" href="[!--news.url--]lianxi">Contact Us</a></h3>
 				</li>
 				<li id="m5" class="m">
-					<h3><a target="_blank" href="[!--news.url--]zhengpin">正品查詢</a></h3>
+					<h3><a target="_blank" href="[!--news.url--]down">Download</a></h3>
 				</li>
 			</ul>
 		</div>
